--- a/templates/chat.html
+++ b/templates/chat.html
@@ -22,7 +22,7 @@
 							<div class="d-flex bd-highlight">
 								<div class="img_cont">
 									<!-- <img src="https://i.ibb.co/fSNP7Rz/icons8-chatgpt-512.png" class="rounded-circle user_img"> -->
-									<img src="https://www.prdistribution.com/spirit/uploads/pressreleases/2019/newsreleases/d83341deb75c4c4f6b113f27b1e42cd8-chatbot-florence-already-helps-thousands-of-patients-to-remember-their-medication.png" class="rounded-circle user_img">
+									<img src="https://files.oaiusercontent.com/file-5tin9vPY5qKFqTE7uzrWtkXb?se=2123-10-18T05%3A58%3A04Z&sp=r&sv=2021-08-06&sr=b&rscc=max-age%3D31536000%2C%20immutable&rscd=attachment%3B%20filename%3Da0bafead-eb1a-4988-8f64-2f624ea4f1a1.png&sig=PCRCvttyMrBTJSqEvPY3lRB3bdFYTc3RPKYJBQuNQZg%3D" class="rounded-circle user_img">
 									<span class="online_icon"></span>
 								</div>
 								<div class="user_info">
